src/index.css
@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");

:root {
  font-family: "Titillium Web";
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  height: 100%;
  overflow-x: hidden;
}

body {
  margin: 0;
  height: 100%;
  position: relative;
  overflow-x: hidden;
}

button {
  &:hover {
    cursor: pointer;
  }
}

.lock-scroll {
  overflow: hidden;
}

@font-face {
  font-family: "Mukta";
  src: url("https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap");
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

